--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ beautifulsoup4==4.9.3
 certifi==2021.5.30
 charset-normalizer==2.0.4
 Django==3.2.6
+djangorestframework==3.12.4
 idna==3.2
 mysqlclient==2.0.3
+Pillow==8.3.1
 python-decouple==3.4
 pytz==2021.1
 requests==2.26.0
